[tool.poetry]
name = "handa-backend"
version = "0.1.0"
description = ""
authors = ["SnowSuno <snowsuno.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
tortoise-orm = "^0.18.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-admin = "^1.0.3"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fakeredis = "^1.7.0"
aerich = "^0.6.2"
boto3 = "^1.20.54"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "app.db.database.TORTOISE_ORM"
location = "./app/migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
